meta data addition in webpage

--- a/clock.html
+++ b/clock.html
@@ -1,6 +1,11 @@
 <html>
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="description" content="Analogue clock built with knowledge of trigonometry">
+    <meta name="keywords" content="HTML, JavaScript,analgue clock, trigonometry">
+    <meta name="author" content="Livinus Umeaduma">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Analogue Clock</title>
 </head>
 
